Adicionando a folha de estilo e estilizando o HTML

--- a/index.html
+++ b/index.html
@@ -3,9 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="tela-login.css">
     <title>Tela de Login</title>
 </head>
 <body>
-    
+    <div>
+        <h1>Login</h1>
+        <!-- <label for="text">Nome</label> -->
+        <input type="text" placeholder="Nome">
+        <br><br>
+        <!-- <label for="Password">Senha</label> -->
+        <input type="password" placeholder="Senha">
+        <br><br>
+        <button>Enviar</button>
+    </div>
 </body>
 </html>
